Bump to Java 21 and Eclipse 2024-12